--- a/style.css
+++ b/style.css
@@ -1,43 +1,72 @@
-
+@import url(http://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700|Open+Sans:400,600,300);
 html{height:100%;}
 body{
   margin-left:50px;
   margin-right:50px;
   height:100%;
+  font-family: 'Open Sans', sans-serif;
 }
 #pagecontainer{
 height:100%;
 }
 
 #banner{
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight:200;
   background-color:#98A729;
   color: #F5F3F4;
-  height:50px;
+  height:125px;
   border: 2px solid;
-  font-size:30px;
+  font-size:50px;
   border-radius: 10px;
   padding-left:5%;
   padding-top:2%;
 }
+#sub{
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 100;
+  font-size: 20px;
+}
 
 #feedback{
-  margin-top:2%;
+
   /*border-radius: 10px;
   border: 2px solid;
   border-color: #BFB58A;*/
-  height: auto;
-  height:80%;
-  position:relative;
+  margin-top:15%;
+  height:20%;
 }
 
-#road{
-  margin-top:15%;
+button{
+  font-family: 'Open Sans', sans-serif;
+  font-weight:100;
   background-color:#cba87a;
-  height:200px;
-  position:relative;
-  border-radius: 10px;
+  height:20%;
+  width: 20%;
+  float:left;
+  font-size:50px;
+  position:absolute;
+  color:white;
+  border-radius:10px;
   border: 2px solid;
   border-color:#cba87a;
+}
+
+#timer{
+  display:inline-block;
+  position:relative;
+  float:left;
+}
+#road{
+
+  /*background-color:#cba87a;*/
+  margin-top:1%;
+  background-image: url('lamp.jpg') no-repeat fixed;
+  height:200px;
+
+  border-radius: 10px;
+  border: 2px solid;
+  border-color:#98A729;
 }
 
 
@@ -46,19 +75,25 @@ height:100%;
 
 }
 
+
 #counter{
   /*font-family: 'Geostar', cursive;*/
-  text-align:right;
+
   font-family: 'Stint Ultra Expanded', cursive;
-  font-size:200px;
+  font-size:150px;
+  line-height:inherit;
+  float:right;
+  display:block;
 }
 
 #unit{
-  font-size:150px;
+  font-size:100px;
 }
 
 
-
+#canvas{
+  display:inline;
+}
 
 
 
