--- a/style.css
+++ b/style.css
@@ -12,20 +12,39 @@ height:100%;
 
 #banner{
   font-family: 'Josefin Sans', sans-serif;
-  font-weight:200;
   background-color:#98A729;
   color: #F5F3F4;
-  height:125px;
-  border: 2px solid;
+  height:70px;
+  border: 4px solid;
   font-size:50px;
   border-radius: 10px;
+  border-color:#98A729;
   padding-left:5%;
   padding-top:2%;
+  margin-bottom:4%;
+  margin-top:2%;
+  color: black;
+  font-weight:bold;
 }
 #sub{
   font-family: 'Open Sans', sans-serif;
   font-weight: 100;
   font-size: 20px;
+}
+#results{
+  font-family: 'Open Sans', sans-serif;
+  color:black;
+  margin-left:5%;
+  margin-bottom:1%;
+  position:absolute;
+left:500px;
+font-size:30px;
+font-weight:bold;
+
+}
+#question{
+  font-size:55px;
+  font-weight:100;
 }
 
 #feedback{
@@ -33,23 +52,24 @@ height:100%;
   /*border-radius: 10px;
   border: 2px solid;
   border-color: #BFB58A;*/
-  margin-top:15%;
+  margin-top:5%;
   height:20%;
 }
 
 button{
   font-family: 'Open Sans', sans-serif;
   font-weight:100;
-  background-color:#cba87a;
-  height:20%;
-  width: 20%;
+  margin-top:2%;
+  /*background-color:#cba87a;*/
+  height:15%;
+  width: 15%;
   float:left;
   font-size:50px;
   position:absolute;
-  color:white;
+  color:black;
   border-radius:10px;
-  border: 2px solid;
-  border-color:#cba87a;
+  border: 3px solid;
+  border-color:black;
 }
 
 #timer{
@@ -60,13 +80,14 @@ button{
 #road{
 
   /*background-color:#cba87a;*/
-  margin-top:1%;
+  margin-top:3%;
   background-image: url('lamp.jpg') no-repeat fixed;
   height:200px;
 
-  border-radius: 10px;
-  border: 2px solid;
-  border-color:#98A729;
+  border-right: 4px solid;
+/*  border-left:0px;
+  border-right:0px;*/
+  /*border-color:#98A729;*/
 }
 
 
@@ -79,15 +100,18 @@ button{
 #counter{
   /*font-family: 'Geostar', cursive;*/
 
-  font-family: 'Stint Ultra Expanded', cursive;
-  font-size:150px;
+  font-family: 'Open Sans', sans-serif;
+  font-size:130px;
+  font-weight:bold;
   line-height:inherit;
   float:right;
   display:block;
 }
 
 #unit{
+  font-family:'Open Sans', sans-serif;
   font-size:100px;
+  font-weight:200;
 }
 
 
